Add new status badge for testing state

--- a/bluev-explorer.html
+++ b/bluev-explorer.html
@@ -307,6 +307,12 @@
             border: 1px solid rgba(0, 212, 255, 0.3);
         }
 
+        .status-badge.testing {
+            background: rgba(14, 196, 0, 0.1);
+            color: var(--primary);
+            border: 1px solid rgba(14, 196, 0, 0.3);
+        }
+
         .info-section {
             background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(20px) saturate(180%);
@@ -470,7 +476,7 @@
                 <div class="status-item">
                     <div class="status-icon">🔧</div>
                     <div class="status-text">Core .rpf reading engine</div>
-                    <span class="status-badge in-progress">Testing</span>
+                    <span class="status-badge testing">Testing</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">💾</div>
