Update status badge from 'Testing' to 'Broken. Fixing!'

--- a/bluev-explorer.html
+++ b/bluev-explorer.html
@@ -476,7 +476,7 @@
                 <div class="status-item">
                     <div class="status-icon">🔧</div>
                     <div class="status-text">Core .rpf reading engine</div>
-                    <span class="status-badge testing">Testing</span>
+                    <span class="status-badge in-progress">Broken. Fixing!</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">💾</div>
