Added more pages

--- a/index.html
+++ b/index.html
@@ -500,15 +500,15 @@
     <nav>
         <ul>
             <li><a href="index.html" class="logo">blueisatlantic</a></li>
-            <li><a href="mods.html">Mods</a></li>
-            <li><a href="#features">Features</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#features">About</a></li>
         </ul>
     </nav>
 
     <section class="hero">
         <h1>blueisatlantic</h1>
         <p>Creating GTA 5 mods. Explore my work and upcoming projects.</p>
-        <a href="mods.html" class="cta-button">Explore Mods</a>
+        <a href="projects.html" class="cta-button">Explore Projects</a>
     </section>
 
     <section class="mods-section" id="mods">
@@ -533,24 +533,6 @@
                 </div>
             </a>
 
-            <a href="bluev-explorer.html" style="text-decoration: none; color: inherit;">
-                <div class="mod-card fade-in">
-                    <div class="mod-card-content">
-                        <div class="mod-icon">📦</div>
-                        <h3>BlueV Explorer</h3>
-                        <p>A powerful tool for reading and modifying .rpf files. Simplify your modding workflow with an intuitive interface and advanced features.</p>
-                        <div class="mod-stats">
-                            <div class="stat">
-                                <span class="stat-dot"></span>
-                                <span>Coming Soon</span>
-                            </div>
-                            <div class="stat">
-                                <span style="color: var(--primary);">View Details →</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
         </div>
     </section>
 
