--- a/tornadov.html
+++ b/tornadov.html
@@ -437,13 +437,13 @@
     <nav>
         <ul>
             <li><a href="index.html" class="logo">blueisatlantic</a></li>
-            <li><a href="mods.html">Mods</a></li>
-            <li><a href="index.html#features">Features</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="index.html#features">About</a></li>
         </ul>
     </nav>
 
     <div class="mod-page">
-        <a href="mods.html" class="back-button">← Back to Mods</a>
+        <a href="projects.html" class="back-button">← Back to Projects</a>
 
         <div class="mod-header">
             <div class="mod-icon-large">🌪️</div>
@@ -454,10 +454,10 @@
         <div class="download-section">
             <h2>Download</h2>
             <div class="download-buttons">
-                <a href="https://www.gta5-mods.com/scripts/tornadov-blueisatlantic" target="_blank" class="download-btn">
+                <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
                     📥 Download on GTA5-Mods.com
                 </a>
-                <a href="https://github.com/yourusername/tornadov" target="_blank" class="download-btn secondary">
+                <a href="https://github.com/BlueIsAtlantic/TornadoV" target="_blank" class="download-btn secondary">
                     📦 View on GitHub
                 </a>
             </div>
@@ -473,6 +473,42 @@
                 <div class="version-item">
                     <label>Requirements</label>
                     <span>ScriptHookV, ScriptHookVDotNet</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="download-section" style="animation-delay: 0.5s; background: rgba(0, 212, 255, 0.03);">
+            <h2>🆕 TornadoV++ (C++ Version - Alpha)</h2>
+            <p style="color: var(--text-muted); margin-bottom: 20px; font-size: 15px;">
+                Next-generation rewrite in native C++ for better performance and compatibility. 
+                Works on both GTA V Legacy and Enhanced in one file!
+            </p>
+            <div class="download-buttons">
+                <a href="#" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
+                    ⚡ Download TornadoV++ Alpha
+                </a>
+                <a href="#" class="download-btn secondary">
+                    📂 GitHub Repository
+                </a>
+            </div>
+            <div style="margin-top: 20px; padding: 15px; background: rgba(255, 165, 0, 0.1); border: 1px solid rgba(255, 165, 0, 0.3); border-radius: 12px;">
+                <p style="color: #ffa500; font-size: 14px; margin: 0;">
+                    ⚠️ <strong>Alpha Version:</strong> This is an early test release. Expect bugs and rough edges. 
+                    The C# version above remains the stable, recommended download.
+                </p>
+            </div>
+            <div class="version-info" style="margin-top: 25px;">
+                <div class="version-item">
+                    <label>Version</label>
+                    <span>2.0.0-alpha</span>
+                </div>
+                <div class="version-item">
+                    <label>Requirements</label>
+                    <span>ScriptHookV only</span>
+                </div>
+                <div class="version-item">
+                    <label>Status</label>
+                    <span style="color: #ffa500;">Testing Phase</span>
                 </div>
             </div>
         </div>
@@ -496,7 +532,7 @@
             <h3>Installation</h3>
             <ul>
                 <li>Install ScriptHookV and ScriptHookVDotNet</li>
-                <li>Download TornadoV from GTA5-Mods.com</li>
+                <li>Download TornadoV .zip package from Gofile.io</li>
                 <li>Extract the files to your GTA V scripts folder except the README file</li>
                 <li>Launch the game and enjoy!</li>
             </ul>
