--- a/bluev-explorer.html
+++ b/bluev-explorer.html
@@ -307,12 +307,6 @@
             border: 1px solid rgba(0, 212, 255, 0.3);
         }
 
-        .status-badge.testing {
-            background: rgba(14, 196, 0, 0.1);
-            color: var(--primary);
-            border: 1px solid rgba(14, 196, 0, 0.3);
-        }
-
         .info-section {
             background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(20px) saturate(180%);
@@ -476,12 +470,12 @@
                 <div class="status-item">
                     <div class="status-icon">🔧</div>
                     <div class="status-text">Core .rpf reading engine</div>
-                    <span class="status-badge in-progress">Broken. Fixing!</span>
+                    <span class="status-badge completed">Completed</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">💾</div>
                     <div class="status-text">Enhanced Edition support</div>
-                    <span class="status-badge in-progress">In Progress</span>
+                    <span class="status-badge completed">Completed</span>
                 </div>
                 <div class="status-item">
                     <div class="status-icon">🎨</div>
