--- a/tornadov.html
+++ b/tornadov.html
@@ -452,10 +452,10 @@
         </div>
 
         <div class="download-section">
-            <h2>Download</h2>
+            <h2>TornadoV (ScriptHookVDotNet(C#))</h2>
             <div class="download-buttons">
                 <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
-                    📥 Download on GTA5-Mods.com
+                    📥 Download TornadoV
                 </a>
                 <a href="https://github.com/BlueIsAtlantic/TornadoV" target="_blank" class="download-btn secondary">
                     📦 View on GitHub
@@ -478,7 +478,7 @@
         </div>
 
         <div class="download-section" style="animation-delay: 0.5s; background: rgba(0, 212, 255, 0.03);">
-            <h2>🆕 TornadoV++ (C++ Version - Alpha)</h2>
+            <h2>TornadoV++ (C++ Version - Alpha)</h2>
             <p style="color: var(--text-muted); margin-bottom: 20px; font-size: 15px;">
                 Next-generation rewrite in native C++ for better performance and compatibility. 
                 Works on both GTA V Legacy and Enhanced in one file!
@@ -494,21 +494,21 @@
             <div style="margin-top: 20px; padding: 15px; background: rgba(255, 165, 0, 0.1); border: 1px solid rgba(255, 165, 0, 0.3); border-radius: 12px;">
                 <p style="color: #ffa500; font-size: 14px; margin: 0;">
                     ⚠️ <strong>Alpha Version:</strong> This is an early test release. Expect bugs and rough edges. 
-                    The C# version above remains the stable, recommended download.
+                    The C# version above remains the stable, recommended download. (TornadoV++ Alpha will release soon!)
                 </p>
             </div>
             <div class="version-info" style="margin-top: 25px;">
                 <div class="version-item">
                     <label>Version</label>
-                    <span>2.0.0-alpha</span>
+                    <span>0.0.1-alpha</span>
                 </div>
                 <div class="version-item">
                     <label>Requirements</label>
-                    <span>ScriptHookV only</span>
+                    <span>ScriptHookV</span>
                 </div>
                 <div class="version-item">
                     <label>Status</label>
-                    <span style="color: #ffa500;">Testing Phase</span>
+                    <span style="color: #ffa500;">Development/Unreleased Phase</span>
                 </div>
             </div>
         </div>
@@ -529,16 +529,22 @@
                 <li>Compatible with latest GTA V versions</li>
             </ul>
 
-            <h3>Installation</h3>
+            <h3>Installation For TornadoV</h3>
             <ul>
                 <li>Install ScriptHookV and ScriptHookVDotNet</li>
                 <li>Download TornadoV .zip package from Gofile.io</li>
                 <li>Extract the files to your GTA V scripts folder except the README file</li>
                 <li>Launch the game and enjoy!</li>
+                <li>If you encounter crashes on tornado's spawn, try to install Menyoo.</li>
             </ul>
 
-            <h3>Controls</h3>
-            <p>Check the included README file for detailed control instructions and configuration options.</p>
+            <h3>Installation For TornadoV++</h3>
+            <ul>
+                <li>Install ScriptHookV</li>
+                <li>Download TornadoV++ .zip package and extract it</li>
+                <li>Place ONLY .asi file in your GTA V directory (where GTA5.exe is located)</li>
+                <li>Launch the game and enjoy TornadoV++!</li>
+            </ul>
         </div>
     </div>
 
