Update Projects and links.

--- a/index.html
+++ b/index.html
@@ -535,9 +535,8 @@
     <footer>
         <p>&copy; 2026 BlueIsAtlantic.</p>
         <div class="social-links">
-            <a href="#" title="Discord">💬</a>
-            <a href="#" title="GitHub">📦</a>
-            <a href="#" title="YouTube">📺</a>
+            <a href="https://discord.gg/Zw42bNmhKJ" title="Discord">💬</a>
+            <a href="https://github.com/BlueIsAtlantic" title="GitHub">📦</a>
         </div>
     </footer>
 
