--- a/projects.html
+++ b/projects.html
@@ -531,7 +531,7 @@
                         <div class="project-card-content">
                             <div class="project-icon">🌪️</div>
                             <h3>TornadoV</h3>
-                            <p>Experience realistic tornado simulation in San Andreas with destructive physics and customizable tornado behavior.</p>
+                            <p>Experience enhanced version of Tornado Script by CamxxCore</p>
                             <div class="project-footer">
                                 <span class="status-badge released">Released</span>
                                 <span class="project-link">View Details →</span>
@@ -550,13 +550,21 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- UnRend -->
                     <div class="project-card disabled">
                         <div class="project-card-content">
-                            <div class="project-icon">⚡</div>
-                            <h3>UnRend</h3>
-                            <p>Performance optimization mod inspired by Sodium, featuring frustum culling and smart chunk loading for better FPS in GTA V and FiveM.</p>
+                            <div class="project-icon">🌀</div>
+                            <h3>HurricaneV</h3>
+                            <p>Making possibilities for hurricanes in GTA V</p>
+                            <div class="project-footer">
+                                <span class="status-badge upcoming">Upcoming</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card disabled">
+                        <div class="project-card-content">
+                            <div class="project-icon">📦</div>
+                            <h3>blueV</h3>
+                            <p>CodeWalker's and OpenIV's insipired tool, also implementing unique features, like AI assistant or integrated internet browser.</p>
                             <div class="project-footer">
                                 <span class="status-badge upcoming">Upcoming</span>
                             </div>
