--- a/tornadov.html
+++ b/tornadov.html
@@ -448,59 +448,29 @@
         <div class="mod-header">
             <div class="mod-icon-large">🌪️</div>
             <h1>TornadoV</h1>
-            <p>Experience realistic tornado simulation in San Andreas with destructive physics and customizable tornado behavior.</p>
+            <p>Experience enhanced and more stable version of Tornado Script by CamxxCore</p>
         </div>
 
-        <div class="download-section">
-            <h2>TornadoV</h2>
-            <div class="download-buttons">
-                <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
-                    📥 Download TornadoV
-                </a>
-                <a href="https://github.com/BlueIsAtlantic/TornadoV" target="_blank" class="download-btn secondary">
-                    📦 View on GitHub
-                </a>
-            </div>
-            <div class="version-info">
-                <div class="version-item">
-                    <label>Current Version</label>
-                    <span>1.5.3</span>
-                </div>
-                <div class="version-item">
-                    <label>Last Updated</label>
-                    <span>January 2026</span>
-                </div>
-                <div class="version-item">
-                    <label>Requirements</label>
-                    <span>ScriptHookV, ScriptHookVDotNet</span>
-                </div>
-            </div>
-        </div>
+        
 
         <div class="download-section" style="animation-delay: 0.5s; background: rgba(0, 212, 255, 0.03);">
-            <h2>TornadoV++</h2>
+            <h2>TornadoV</h2>
             <p style="color: var(--text-muted); margin-bottom: 20px; font-size: 15px;">
                 Rewrite in native C++ for better performance and compatibility. 
                 Works on both GTA V Legacy and Enhanced in one file!
             </p>
             <div class="download-buttons">
                 <a href="https://gofile.io/d/UOH9Bj" class="download-btn" style="background: linear-gradient(135deg, #00ff88, #00d4ff);">
-                    Download TornadoV++
+                    Download TornadoV
                 </a>
                 <a href="https://github.com/BlueIsAtlantic/TornadoV.cpp" class="download-btn secondary">
                     📦 View on GitHub
                 </a>
             </div>
-            <div style="margin-top: 20px; padding: 15px; background: rgba(255, 165, 0, 0.1); border: 1px solid rgba(255, 165, 0, 0.3); border-radius: 12px;">
-                <p style="color: #ffa500; font-size: 14px; margin: 0;">
-                    ⚠️ <strong>Beta Version:</strong> This is an early test release. Expect bugs.
-                    The C# version above remains the stable, recommended download.
-                </p>
-            </div>
             <div class="version-info" style="margin-top: 25px;">
                 <div class="version-item">
                     <label>Version</label>
-                    <span>0.0.1-beta</span>
+                    <span>1.7.1</span>
                 </div>
                 <div class="version-item">
                     <label>Requirements</label>
@@ -509,6 +479,32 @@
                 <div class="version-item">
                     <label>Status</label>
                     <span style="color: #297000;">Released</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="download-section">
+            <h2>TornadoV (Legacy)</h2>
+            <div class="download-buttons">
+                <a href="https://gofile.io/d/nif9Qb" target="_blank" class="download-btn">
+                    Download TornadoV
+                </a>
+                <a href="https://github.com/BlueIsAtlantic/TornadoV" target="_blank" class="download-btn secondary">
+                    📦 View on GitHub
+                </a>
+            </div>
+            <div class="version-info">
+                <div class="version-item">
+                    <label>Current Version</label>
+                    <span>1.7.0</span>
+                </div>
+                <div class="version-item">
+                    <label>Last Updated</label>
+                    <span>January 2026</span>
+                </div>
+                <div class="version-item">
+                    <label>Requirements</label>
+                    <span>ScriptHookV, ScriptHookVDotNet</span>
                 </div>
             </div>
         </div>
